# Lesson1_Codility

./: CMakeLists.txt  README.md  build.sh
src/: Main.cpp
